# star-log

./: .gitignore  Cargo.toml  README.md  calculate.py  calculations.rs  main.rs
code/: calculations.rs  main.rs
src/: location_data.json  main.rs  timezone.json
